# Stasis

./: .gitignore  .gitmodules  meson.build  run.py  setup.py
src/: main.cpp
src/core/: allocator.h  asserts.h  common.h  log.cpp  log.h  option.h  result.h  types.h
src/memory/: memory.cpp  memory.h  system_allocator.cpp  system_allocator.h  tag.h
src/platform/: fs.cpp  fs.h
src/window/: window.cpp  window.h
